--- a/clientbhatt/src/App.css
+++ b/clientbhatt/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
 }
-
+.head{
+  color: whitesmoke;
+}
+.app{
+  text-align: center;
+  align-items: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
