--- a/clientbhatt/src/App.css
+++ b/clientbhatt/src/App.css
@@ -8,6 +8,9 @@
   text-align: center;
   align-items: center;
 }
+.but{
+  padding: 10px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
